# WMD-q5-learning

./: LICENSE  README.md
class_path/c10_11_kafta_db/: compose.yaml
class_path/c10_11_kafta_db/microservice_01/: Dockerfile.dev  pyproject.toml
class_path/c10_11_kafta_db/microservice_01/app/api/: deps.py
class_path/c10_kafta_db/: compose.yaml
class_path/c10_kafta_db/microservice_01/: .env  Dockerfile.dev  pyproject.toml
class_path/c10_kafta_db/microservice_01/app/: main.py  settings.py
class_path/c10_kafta_db/microservice_01/app/api/: deps.py  main.py
class_path/c10_kafta_db/microservice_01/app/api/routes/: users.py
class_path/c10_kafta_db/microservice_01/app/utils/: db.py
class_path/c12_protobuf/: compose.yaml
class_path/c12_protobuf/microservice_01/: Dockerfile.dev  pyproject.toml
class_path/c12_protobuf/microservice_01/app/: main.py  model.py  todo.proto  todo_pb2.py
class_path/c5_dev_container/: Dockerfile  pyproject.toml
class_path/c5_dev_container/app/: main.py
class_path/c7_docker_compose/: compose.yaml  readme.md
class_path/c7_docker_compose/backend/: .env  Dockerfile  pyproject.toml
class_path/c7_docker_compose/backend/app/: main.py
class_path/c8_docker_compose_db/: Readme.md  compose.yaml
class_path/c8_docker_compose_db/todo/: .env  pyproject.toml
class_path/c8_docker_compose_db/todo/app/: main.py
class_path/c9_auth/00_generate_access_token/: README.md  compose.yml
class_path/c9_auth/00_generate_access_token/auth_service/: pyproject.toml
class_path/c9_auth/00_generate_access_token/auth_service/app/: main.py
class_path/c9_auth/01_implement_auth/auth_service/app/: main.py
class_path/c9_auth/02_authorize_endpoints/: README.md
class_path/c9_auth/02_authorize_endpoints/auth_service/: Dockerfile  file.js
class_path/c9_auth/02_authorize_endpoints/auth_service/app/: main.py
class_path/c9_synchronous_messages/: pyproject.toml
class_path/c9_synchronous_messages/app/: user.py
class_path/class03_practice/class_03/: Dockerfile.dev  README.md  pyproject.toml
class_path/class03_practice/class_03/app/: main.py
class_path/class_04_practice/: README.md
class_path/class_04_practice/app/: main.py
class_path/dev_c5/: Dockerfile  README.md
class_path/dev_c5/tests/: test_main.py
my_learning/c8_practive/: compose.yaml
my_learning/c8_practive/backend/: .env  Dockerfile.dev  pyproject.toml
my_learning/c8_practive/backend/app/: main.py
my_learning/compose/: pyproject.toml
my_learning/dev_con/: README.md  pyproject.toml
my_learning/dev_con/.devcontainer/: devcontainer.json
my_learning/dev_con/app/: main.py
my_learning/docker_errors/: Dockerfile  pyproject.toml
my_learning/docker_errors/app/: main.py
my_learning/error_handling/: pyproject.toml
my_learning/error_handling/app/: main.py
my_learning/todo_backend/: README.md
my_learning/todo_with_poetry_dockerize/backend/: .env.local  pyproject.toml  requirements.txt
my_learning/todo_with_poetry_dockerize/backend/app/: index.py  main.py  model.py  settings.py
my_learning/todo_with_poetry_dockerize/backend/app/api/: dep.py  main.py
my_learning/todo_with_poetry_dockerize/backend/app/api/routes/: login.py  todos.py  users.py
my_learning/todo_with_poetry_dockerize/backend/app/utils/: db.py  mock_db.py
(+3 files in other folders)
