[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Aqeel Shahzad <67902032+aqeel-spec@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
pytest = "^8.2.0"
passlib = "^1.7.4"
pydantic = "^2.7.1"
psycopg = {extras = ["binary"], version = "^3.1.18"}
httpx = "^0.27.0"
sqlmodel = "^0.0.18"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
