[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Aqeel Shahzad <67902032+aqeel-spec@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
